--- a/index.html
+++ b/index.html
@@ -116,6 +116,6 @@
         <div class="col-2"></div>
     </div>
 </div>
-<script src="Tic_Toc.js"></script>
+<script src="javascript\Tic_Toc.js"></script>
 </body>
 </html>
