--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             width: 6em;
         }
         body{
+            margin : 5px 0px 5px 0px;
             background-color: blueviolet;
         }
         table{
