--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             text-align: center;
         }
         button{
+            text-align: center;
             width: 6em;
         }
         body{
