--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         }
         button{
             text-align: center;
-            width: 6em;
+            width: 100%;
         }
         body{
             margin : 5px 0px 5px 0px;
@@ -111,11 +111,11 @@
 <br>
 <div class="container">
     <div class="row">
-        <div class="col-5"></div>
-        <div class="col-5">
+        <div class="col-4"></div>
+        <div class="col-4">
             <button type="button" class="btn btn-success" id="next">Next</button>
         </div>
-        <div class="col-2"></div>
+        <div class="col-4"></div>
     </div>
 </div>
 <script src="javascript\Tic_Toc.js"></script>
