--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@
         <div class="col-xl-3"></div>
         <div class="col-xl-6 col-12">
     <div class="jumbotron">
-        <h1 class="display-4">Tic Tac Game :D </h1>
-        <p>Click on Restart to play again</p>
+        <h1 class="display-4">لعبة اكس او</h1>
+        <p>اضغط على عيد اللعبة لإعادة اللعبة</p>
+        <p>كيفية اللعب: اضغط على اي صندوق ومن ثم اضغط على زر التالي</p>
         <h2>Time</h2>
-        <a class="btn btn-primary btn-lg" role="button">Restart</a>
+        <a class="btn btn-primary btn-lg" role="button">عيد اللعبة</a>
       </div>
     </div>
       <div class="col-xl-3"></div>
@@ -113,7 +114,7 @@
     <div class="row">
         <div class="col-4"></div>
         <div class="col-4">
-            <button type="button" class="btn btn-success" id="next">Next</button>
+            <button type="button" class="btn btn-success" id="next">التالي</button>
         </div>
         <div class="col-4"></div>
     </div>
