--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <style>
         .jumbotron{
+            padding: 0em 0em 1em 0em;
             text-align: center;
         }
         button{
@@ -16,9 +17,10 @@
             width: 100%;
         }
         body{
-            margin : 5px 0px 5px 0px;
-            background-color: blueviolet;
+            margin : 0px 0px 5px 0px;
+            background-color:  silver;
         }
+   
         table{
             background-color: white;
             width: 100%;
@@ -31,26 +33,22 @@
             height: 2em;
         }
     </style>
-    <div class="container">
-    <div class="row">
-        <div class="col-xl-3"></div>
-        <div class="col-xl-6 col-12">
-    <div class="jumbotron">
+    <div class="jumbotron bg-secondary text-white">
         <h1 class="display-4">لعبة اكس او</h1>
         <p>اضغط على عيد اللعبة لإعادة اللعبة</p>
         <p>كيفية اللعب: اضغط على اي صندوق ومن ثم اضغط على زر التالي</p>
         <h2>Time</h2>
         <a class="btn btn-primary btn-lg" role="button">عيد اللعبة</a>
       </div>
-    </div>
-      <div class="col-xl-3"></div>
-    </div>
 
-      <div class="container">
+      <div class="container-fluid">
       <div class="row">
-     <div class="col-xl-1"></div>
-      <div class="col-xl-3"></div>
-      <div class="col-xl-3 col-12" >
+      <div class="col-12" >
+        <div class="mr-xl-5 ml-xl-5 pr-xl-5 pl-xl-5">
+        <div class="mr-xl-5 ml-xl-5 pr-xl-5 pl-xl-5">
+        <div class="mr-lg-5 ml-lg-5 pr-lg-5 pl-lg-5"> 
+        <div class="mr-md-5 ml-md-5 pr-md-5 pl-md-5"> 
+        <div class="mr-md-5 ml-md-5 pr-md-5 pl-md-5"> 
     <table>
         <tr id="FR">
             <div class="row">
@@ -105,20 +103,29 @@
         </tr>
     </table>
     </div>
-    <div class="col-xl-3"></div>
-    <div class="col-xl-2"></div>
+    </div>
+    </div>
+    </div>
+    </div>
+    </div>
 </div>
 </div>
 <br>
-<div class="container">
+<div class="container-fluid">
     <div class="row">
         <div class="col-4"></div>
         <div class="col-4">
-            <button type="button" class="btn btn-success" id="next">التالي</button>
+            <div class="mr-xl-5 ml-xl-5"> 
+            <div class="mr-lg-5 ml-lg-5"> 
+            <div class="mr-md-5 ml-md-5">
+            <button type="button" class="btn btn-success text-white" id="next">التالي</button>
+            </div>
+            </div>
+            </div>
         </div>
         <div class="col-4"></div>
     </div>
 </div>
-<script src="javascript\Tic_Toc.js"></script>
+<script src="tic_tac_arabic.js"></script>
 </body>
 </html>
