--- a/index.html
+++ b/index.html
@@ -126,6 +126,6 @@
         <div class="col-4"></div>
     </div>
 </div>
-<script src="tic_tac_arabic.js"></script>
+<script src="javascript/Tic_Toc.js"></script>
 </body>
 </html>
