--- a/index.html
+++ b/index.html
@@ -127,6 +127,11 @@
         <div class="col-4"></div>
     </div>
 </div>
+      <div class="fixed-bottom">
+        <div class="jumbotron bg-secondary text-white" id="mybott">
+        <p>© Copyright 2020 Adel Abu Ghazaleh All Rights Reserved</p>
+    </div>
+    </div> 
 <script src="javascript/Tic_Toc.js"></script>
 </body>
 </html>
