--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
             width: 1em;
             height: 2em;
         }
+         }
+        #mybott{
+            padding: 0px 2px 10px 10px;
+            margin: 0px 0px 0px 0px;
+        }
     </style>
     <div class="jumbotron bg-secondary text-white">
         <h1 class="display-4">لعبة اكس او</h1>
