--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         #mybott{
             padding: 0px 2px 10px 10px;
             margin: 10px 0px 0px 0px;
+            text-align: left;
         }
     </style>
     <div class="jumbotron bg-secondary text-white">
