--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     </head>
 <body>
     <style>
+          html {
+            position: relative;
+           min-height: 100%;
+                }
         .jumbotron{
             padding: 0em 0em 1em 0em;
             text-align: center;
@@ -38,6 +42,9 @@
             padding: 0px 2px 10px 10px;
             margin: 10px 0px 0px 0px;
             text-align: left;
+            bottom: 0;
+            width: 100%;
+            position: absolute;
         }
     </style>
     <div class="jumbotron bg-secondary text-white">
